image pull secrets

--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -15,3 +15,5 @@ spec:
       containers:
       - name: org-service 
         image: p6m.jfrog.io/ybor-studio-docker/applications/organization-service-server:placeholder
+      imagePullSecrets:
+        - name: dockerconfig
