--- a/deployment-org-service.yaml
+++ b/deployment-org-service.yaml
@@ -15,3 +15,5 @@ spec:
       containers:
       - image: p6m.jfrog.io/ybor-studio-docker/applications/organization-service-server:0.1.153
         name: org-service
+      imagePullSecrets:
+      - name: dockerconfig
